autogen code according to new API
